# The-Neural-Network-OperationandAI

./: Readme.md  readme.md
agent-server/: .env  .env.example  config.py  main.py  pyproject.toml  whatsapp.py
agent-server/agents/: __init__.py  bottleneck_agent.py  customer_agent.py  graph.py  inventory_agent.py  leads_agent.py  order_agent.py  router.py  state.py  supplier_agent.py  workload_agent.py
agent-server/api/: __init__.py
agent-server/api/routes/: analytics.py  chat.py  inventory.py  leads.py  orders.py  staff.py  suppliers.py
agent-server/database/: __init__.py  connection.py  models.py
agent-server/scripts/: populate_all.py  populate_inventory.py  populate_staff.py  populate_suppliers.py
client/: package.json  pnpm-lock.yaml
client/app/: layout.tsx  page.tsx
client/app/dashboard/: layout.tsx  page.tsx
client/app/dashboard/bottlenecks/: page.tsx
client/app/dashboard/chat/: page.tsx
client/app/dashboard/inventory/: page.tsx
client/app/dashboard/leads/: page.tsx
client/app/dashboard/orders/: page.tsx
client/app/dashboard/staff/: page.tsx
client/app/dashboard/supplier-chat/: page.tsx
client/app/dashboard/suppliers/: page.tsx
client/components/layout/: header.tsx  sidebar.tsx
client/lib/: api.ts
leads-comms/: README.md  app.py  demo_clients.json  potential_leads_20260201_001322.txt  potential_leads_20260201_001650.txt  start.bat
leads-comms/templates/: index.html
